--- a/charts/example-function-app/templates/03-scaledobject.yaml
+++ b/charts/example-function-app/templates/03-scaledobject.yaml
@@ -22,12 +22,5 @@ spec:
         maxActivitiesPerWorker: {{ .Values.taskHub.maxActivitiesPerWorker | quote }}
         maxOrchestrationsPerWorker: {{ .Values.taskHub.maxOrchestrationsPerWorker | quote }}
         taskHubName: {{ .Values.taskHub.name }}
-        {{- if .Values.scaledObject.caCert }}
-        caCert: {{ .Values.scaledObject.caCert }}
-        {{- end }}
-        {{- if .Values.scaledObject.tlsClientCert }}
-        tlsClientCert: {{ .Values.scaledObject.tlsClientCert }}
-        {{- end }}
-        {{- if .Values.scaledObject.tlsClientKey }}
-        tlsClientKey: {{ .Values.scaledObject.tlsClientKey }}
-        {{- end }}
+      authenticationRef:
+        name: {{ template "example-function-app.fullname" . }}
