--- a/.github/actions/helm-test/action.yml
+++ b/.github/actions/helm-test/action.yml
@@ -76,6 +76,7 @@ runs:
       shell: bash
       run: |
         kubectl create namespace keda
+        kubectl create namespace ${{ inputs.functionAppNamespace }}
         mkdir -p ${{ runner.temp }}/certs
 
         # Create CA Root Certificate
