--- a/.github/actions/helm-test/action.yml
+++ b/.github/actions/helm-test/action.yml
@@ -257,15 +257,41 @@ runs:
           127.0.0.1:10004 \
           externalscaler.ExternalScaler/GetMetricSpec 1> /dev/null
 
+    - name: Test Scaler
+      shell: bash
+      run: |
+        kubectl port-forward service/azurite -n azure 10000:10000 10001:10001 10002:10002 > /dev/null &
+        dotnet test "./tests/Keda.Scaler.DurableTask.AzureStorage.Test.Integration/Keda.Scaler.DurableTask.AzureStorage.Test.Integration.csproj" \
+          -c "${{ inputs.buildConfiguration }}" \
+          -p:ContinuousIntegrationBuild=true \
+          -warnaserror
+      env:
+        DurableTask__ConnectionName: DurableTask:ConnectionString
+        DurableTask__ConnectionString: 'DefaultEndpointsProtocol=http;AccountName=devstoreaccount1;AccountKey=Eby8vdM02xNOcqFlqUwJPLlmEtlCDXJ1OUzFT50uSRZ6IFsuFq2UVErCz4I6tq/K1SZFPTOtr/KBHBeksoGMGw==;BlobEndpoint=http://127.0.0.1:10000/devstoreaccount1;QueueEndpoint=http://127.0.0.1:10001/devstoreaccount1;TableEndpoint=http://127.0.0.1:10002/devstoreaccount1;'
+        DurableTask__PartitionCount: ${{ inputs.partitionCount }}
+        DurableTask__TaskHubName: ${{ inputs.taskHubName }}
+        Function__Name: ${{ inputs.functionAppName }}
+        Function__Namespace: ${{ inputs.functionAppNamespace }}
+        Kubernetes__Context: kind-integration
+        Scaling__ActivityDuration: ${{ inputs.testActivityDuration }}
+        Scaling__MaxActivitiesPerWorker: '${{ inputs.maxActivitiesPerWorker }}'
+        Scaling__PollingInterval: ${{ inputs.testStatusPollingInterval }}
+        Scaling__Timeout: ${{ inputs.testTimeout }}
+
     - name: Get Keda Logs
       shell: bash
-      if: ${{ always() }}
+      if: ${{ failure() }}
       run: kubectl logs --tail=-1 --prefix -l app=keda-operator -n keda
 
     - name: Get Scaler Logs
       shell: bash
-      if: ${{ always() }}
+      if: ${{ failure() }}
       run: kubectl logs --tail=-1 --prefix -l app=dtfx-scaler -n keda
+
+    - name: Get Function Logs
+      shell: bash
+      if: ${{ failure() }}
+      run: kubectl logs --tail=-1 --prefix -l app=${{ inputs.functionAppName }} -n ${{ inputs.functionAppNamespace }}
 
     - name: Uninstall Function App Helm Chart
       shell: bash
