Allow unsafe TLS and default trust

--- a/charts/durabletask-azurestorage-scaler/values.yaml
+++ b/charts/durabletask-azurestorage-scaler/values.yaml
@@ -104,6 +104,7 @@ serviceAccount:
 tls:
   caSecret: ""
   secret: ""
+  unsafe: false
 
 # Optional topology spread constraints when replicas > 1
 topologySpreadConstraints: {}
