--- a/charts/durabletask-azurestorage-scaler/templates/02-deployment.yaml
+++ b/charts/durabletask-azurestorage-scaler/templates/02-deployment.yaml
@@ -81,6 +81,8 @@ spec:
             - name: Security__Transport__Client__CaCertificatePath
               value: /cacerts/tls.crt
             {{- end }}
+            - name: Security__Transport__Client__ValidateCertificate
+              value: {{ not .Values.tls.unsafe | quote }}
             {{- if .Values.tls.secret }}
             - name: Security__Transport__Server__CertificatePath
               value: /certs/tls.crt
