--- a/src/Keda.Scaler.DurableTask.AzureStorage/appsettings.json
+++ b/src/Keda.Scaler.DurableTask.AzureStorage/appsettings.json
@@ -7,15 +7,26 @@
   },
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Information"
     },
     "Console": {
       "FormatterName": "systemd",
       "FormatterOptions": {
-        "IncludeScopes": true,
+        "IncludeScopes": false,
+        "SingleLine": true,
         "TimestampFormat": "O",
         "UseUtcTimestamp": true
+      }
+    }
+  },
+  "Security": {
+    "Transport": {
+      "Client": {
+        "Authentication": {
+          "Caching": {
+            "CacheEntryExpiration": "00:05:00"
+          }
+        }
       }
     }
   }
