--- a/.globalconfig
+++ b/.globalconfig
@@ -195,6 +195,7 @@ dotnet_diagnostic.CA1858.severity = error # Use StartsWith instead of IndexOf
 dotnet_diagnostic.CA1859.severity = error # Use concrete types when possible for improved performance
 dotnet_diagnostic.CA1860.severity = error # Avoid using 'Enumerable.Any()' extension method
 dotnet_diagnostic.CA1861.severity = error # Avoid constant arrays as arguments
+dotnet_diagnostic.CA1863.severity = error # Use 'CompositeFormat'
 dotnet_diagnostic.CA1864.severity = error # Prefer the 'IDictionary.TryAdd(TKey, TValue)' method
 dotnet_diagnostic.CA1865.severity = error # Use 'string.Method(char)' instead of 'string.Method(string)' for string with single char
 dotnet_diagnostic.CA1866.severity = error # Use 'string.Method(char)' instead of 'string.Method(string)' for string with single char
@@ -419,7 +420,7 @@ csharp_style_expression_bodied_accessors       = when_on_single_line
 csharp_style_expression_bodied_constructors    = when_on_single_line
 csharp_style_expression_bodied_indexers        = when_on_single_line
 csharp_style_expression_bodied_lambdas         = when_on_single_line
-csharp_style_expression_bodied_local_functions = false
+csharp_style_expression_bodied_local_functions = when_on_single_line
 csharp_style_expression_bodied_methods         = when_on_single_line
 csharp_style_expression_bodied_operators       = when_on_single_line
 csharp_style_expression_bodied_properties      = when_on_single_line
