--- a/charts/durabletask-azurestorage-scaler/Chart.yaml
+++ b/charts/durabletask-azurestorage-scaler/Chart.yaml
@@ -18,13 +18,14 @@ sources:
   - https://github.com/wsugarman/durabletask-azurestorage-scaler
 type: application
 version: "1.1.0"
-
 annotations:
   artifacthub.io/category: monitoring-logging
   artifacthub.io/changes: |
     - kind: added
-      description: Added support for environment variables from config maps and secrets
-  artifacthub.io/containsSecurityUpdates: "true"
+      description: Added support for validating the client's TLS certificate authority
+    - kind: added
+      description: Added Helm values for customizing the scaler's logging
+  artifacthub.io/containsSecurityUpdates: "false"
   artifacthub.io/images: |
     - name: durabletask-azurestorage-scaler
       image: ghcr.io/wsugarman/durabletask-azurestorage-scaler:1.0.0
