--- a/charts/durabletask-azurestorage-scaler/templates/02-deployment.yaml
+++ b/charts/durabletask-azurestorage-scaler/templates/02-deployment.yaml
@@ -70,29 +70,46 @@ spec:
           {{- end }}
           image: "{{ .Values.image.repository }}:{{ default .Chart.AppVersion .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          {{- if or .Values.tls.secret .Values.env }}
           env:
+            - name: Logging__Console__FormatterName
+              value: {{ .Values.logging.format }}
+            - name: Logging__Console__FormatterOptions__TimestampFormat
+              value: {{ .Values.logging.timestampFormat }}
+            - name: Logging__LogLevel__Default
+              value: {{ .Values.logging.level | quote }}
+            {{- if .Values.tls.caSecret }}
+            - name: Security__Transport__Client__CaCertificatePath
+              value: /cacerts/tls.crt
+            {{- end }}
+            - name: Security__Transport__Client__ValidateCertificate
+              value: {{ not .Values.tls.unsafe | quote }}
             {{- if .Values.tls.secret }}
+            - name: Security__Transport__Server__CertificatePath
+              value: /certs/tls.crt
+            - name: Security__Transport__Server__KeyPath
+              value: /certs/tls.key
             - name: ASPNETCORE_URLS
               value: https://+:8080
-            - name: Security__Transport__CertificatePath
-              value: /certs/tls.crt
-            - name: Security__Transport__KeyPath
-              value: /certs/tls.key
             {{- end }}
             {{- if .Values.env }}
             {{- toYaml .Values.env | nindent 12 -}}
             {{- end }}
-          {{- end }}
           {{- if .Values.envFrom }}
           envFrom:
             {{- toYaml .Values.envFrom | nindent 12 -}}
           {{- end }}
-          {{- if .Values.tls.secret }}
+          {{- if or .Values.tls.caSecret .Values.tls.secret }}
           volumeMounts:
+            {{- if .Values.tls.caSecret }}
+            - name: cacerts
+              mountPath: /cacerts
+              readOnly: true
+            {{- end }}
+            {{- if .Values.tls.secret }}
             - name: certs
               mountPath: /certs
               readOnly: true
+            {{- end }}
           {{- end }}
           ports:
             - name: grpc
@@ -102,12 +119,20 @@ spec:
           resources:
             {{- toYaml . | nindent 12 }}
           {{- end }}
-      {{- if .Values.tls.secret }}
+      {{- if or .Values.tls.caSecret .Values.tls.secret }}
       volumes:
+        {{- if .Values.tls.caSecret }}
+        - name: cacerts
+          secret:
+            secretName: {{ .Values.tls.caSecret }}
+            optional: false
+        {{- end }}
+        {{- if .Values.tls.secret }}
         - name: certs
           secret:
             secretName: {{ .Values.tls.secret }}
             optional: false
+        {{- end }}
       {{- end }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
