--- a/charts/example-function-app/templates/01-secret.yaml
+++ b/charts/example-function-app/templates/01-secret.yaml
@@ -7,7 +7,6 @@ metadata:
   name: {{ template "example-function-app.fullname" . }}
   namespace: {{ .Release.Namespace }}
 data:
-  host.master: SE9jYnJ4SWc5MGJZcU5NOFNrU0V0a0dtREJYYkVfdmJuVXVFc2g0aUhYR3pBekZ1MjRHNGlRPT0=
-  host.function.default: bWlpX2l4aGRWQjFwRmhhM0VQZFV3NjNqYUFBVFBfelB5NS1DbWdnNzFRTHNBekZ1OHFfSWNRPT0=
-  host.systemKey.default: N29pekx1SEVkZmM5M20tSWl6X0JZRDVYSEdxSFJrMjZWTnFFYVlJY2UyZ1BBekZ1QnIzRVF3PT0=
-  functions.ishealthyasync.default: d0VTYXdvTXVWcVBCQk4xZWxKSFpsQnBJOHN2b0RySHFmS3ZVajdUUjFrQjZBekZ1VXN4b3ZBPT0=
+  host.function.default: RWtfZGZaWVlJUlFzY3pMbHFNdkc0NElMV1gwNTNSMEw3U3I4UV9DelJ4Ry1BekZ1RHNObVBRPT0=
+  host.master: NjBIYXFLVGVwTk5xb0xGSU5NTHFLbTMxT1dqMHA4VU12VlVKMllmek94bk9BekZ1Yk1BaV9RPT0=
+  host.systemKey.durabletask_extension: eE4tUUpfdU8zUmI4SFBoVWNYWkZJa2s0dlJGd3p4OGYtUXU5N0VFYWdjTmhBekZ1dWdDYmZBPT0=
