--- a/charts/example-function-app/templates/04-serviceaccount.yaml
+++ b/charts/example-function-app/templates/04-serviceaccount.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
-kind: Secret
+kind: ServiceAccount
 metadata:
   labels:
     app.kubernetes.io/name: {{ template "example-function-app.fullname" . }}
