--- a/charts/example-function-app/templates/01-secret.yaml
+++ b/charts/example-function-app/templates/01-secret.yaml
@@ -6,3 +6,8 @@ metadata:
     {{- include "example-function-app.labels" . | indent 4 }}
   name: {{ template "example-function-app.fullname" . }}
   namespace: {{ .Release.Namespace }}
+data:
+  # The following secrets will be generated:
+  # - host.function.default:
+  # - host.master:
+  # - host.systemKey.durabletask_extension:
