--- a/.github/workflows/scaler-ci.yml
+++ b/.github/workflows/scaler-ci.yml
@@ -43,6 +43,7 @@ jobs:
       - name: Upload Code Coverage
         uses: ./.github/actions/code-coverage
         with:
+          codecovToken: ${{ secrets.CODECOV_TOKEN }}
           reportPath: ${{ runner.temp }}/TestResults/*/coverage.cobertura.xml
 
   validate:
