--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -23,8 +23,9 @@
         <PackageReference Include="coverlet.collector" PrivateAssets="All" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" PrivateAssets="All" />
         <PackageReference Include="NSubstitute" />
-        <PackageReference Include="xunit.runner.visualstudio" PrivateAssets="All" />
+        <PackageReference Include="NSubstitute.Analyzers.CSharp" PrivateAssets="All" />
         <PackageReference Include="xunit" />
+        <PackageReference Include="xunit.runner.visualstudio" PrivateAssets="All" />
       </ItemGroup>
 
     </When>
