--- a/src/Keda.Scaler.DurableTask.AzureStorage.Test/Keda.Scaler.DurableTask.AzureStorage.Test.csproj
+++ b/src/Keda.Scaler.DurableTask.AzureStorage.Test/Keda.Scaler.DurableTask.AzureStorage.Test.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Azure.Storage.Queues" />
     <PackageReference Include="Google.Protobuf" />
     <PackageReference Include="Grpc.Core.Api" />
+    <PackageReference Include="MartinCostello.Logging.XUnit" />
   </ItemGroup>
 
 </Project>
