--- a/.github/actions/code-coverage/action.yml
+++ b/.github/actions/code-coverage/action.yml
@@ -29,3 +29,4 @@ runs:
         fail_ci_if_error: true
         token: ${{ inputs.codecovToken }}
         working-directory: ${{ runner.temp }}/codecoverage
+        verbose: true
