--- a/.github/actions/code-coverage/action.yml
+++ b/.github/actions/code-coverage/action.yml
@@ -23,10 +23,10 @@ runs:
         path: ${{ runner.temp }}/codecoverage
 
     - name: Codecov Upload
-      uses: codecov/codecov-action@v2
+      uses: codecov/codecov-action@v3
       with:
-        files: coverage.cobertura.xml
+        directory: ${{ runner.temp }}/codecoverage/
+        files: ./coverage.cobertura.xml
         fail_ci_if_error: true
         token: ${{ inputs.codecovToken }}
-        working-directory: ${{ runner.temp }}/codecoverage
         verbose: true
