--- a/.github/actions/dotnet-publish/action.yml
+++ b/.github/actions/dotnet-publish/action.yml
@@ -70,7 +70,7 @@ runs:
     - name: Test
       shell: bash
       run: |
-        dotnet test "./src/Scaler.sln" \
+        export DOTNET_USE_POLLING_FILE_WATCHER=true && dotnet test "./src/Scaler.sln" \
           -c "${{ inputs.buildConfiguration }}" \
           "-p:ContinuousIntegrationBuild=true;AssemblyVersion=${{ inputs.assemblyVersion }};FileVersion=${{ inputs.fileVersion }};InformationalVersion=${{ inputs.fileVersion }}" \
           -warnaserror \
