--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -22,9 +22,11 @@
       <ItemGroup>
         <PackageReference Include="coverlet.collector" PrivateAssets="All" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" PrivateAssets="All" />
-        <PackageReference Include="Moq" />
-        <PackageReference Include="MSTest.TestAdapter" PrivateAssets="All" />
-        <PackageReference Include="MSTest.TestFramework" />
+        <PackageReference Include="NSubstitute" />
+        <PackageReference Include="NSubstitute.Analyzers.CSharp" PrivateAssets="All" />
+        <PackageReference Include="xunit" />
+        <PackageReference Include="xunit.abstractions" />
+        <PackageReference Include="xunit.runner.visualstudio" PrivateAssets="All" />
       </ItemGroup>
 
     </When>
