--- a/.github/actions/helm-test/action.yml
+++ b/.github/actions/helm-test/action.yml
@@ -197,8 +197,8 @@ runs:
           --set env[0].value=NoCheck \
           --set image.repository=${{ inputs.scalerImageRepository }} \
           --set image.tag=${{ inputs.imageTag }} \
-          --set tls.caSecret=self-signed-ca \
-          --set tls.secret=server-tls \
+          --set tls.caCert.secret=self-signed-ca \
+          --set tls.serverCert.secret=server-tls \
           --wait \
           --timeout 30s \
           dtfx-scaler \
