--- a/charts/durabletask-azurestorage-scaler/templates/01-serviceaccount.yaml
+++ b/charts/durabletask-azurestorage-scaler/templates/01-serviceaccount.yaml
@@ -28,5 +28,5 @@ metadata:
   {{- end }}
   name: {{ template "durabletask-azurestorage-scaler.serviceAccountName" . }}
   namespace: {{ .Release.Namespace }}
-automountServiceAccountToken: {{ .Values.serviceAccount.automountServiceAccountToken }}
+automountServiceAccountToken: {{ .Values.serviceAccount.automount }}
 {{- end -}}
