--- a/charts/durabletask-azurestorage-scaler/templates/02-deployment.yaml
+++ b/charts/durabletask-azurestorage-scaler/templates/02-deployment.yaml
@@ -71,29 +71,29 @@ spec:
           image: "{{ .Values.image.repository }}:{{ default .Chart.AppVersion .Values.image.tag }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
+            {{- if and .Values.tls.serverCert.secret .Values.tls.serverCert.keys.cert }}
+            - name: ASPNETCORE_URLS
+              value: https://+:8080
+            {{- end }}
             - name: Logging__Console__FormatterName
               value: {{ .Values.logging.format }}
             - name: Logging__Console__FormatterOptions__TimestampFormat
               value: {{ .Values.logging.timestampFormat }}
             - name: Logging__LogLevel__Default
               value: {{ .Values.logging.level | quote }}
-            {{- if .Values.tls.caCert.key }}
+            {{- if and .Values.tls.caCert.secret .Values.tls.caCert.key }}
             - name: Security__Transport__Client__CaCertificatePath
               value: "/cacerts/{{ .Values.tls.caCert.key }}"
             {{- end }}
             - name: Security__Transport__Client__ValidateCertificate
               value: {{ not .Values.tls.unsafe | quote }}
-            {{- if .Values.tls.serverCert.keys.cert }}
+            {{- if and .Values.tls.serverCert.secret .Values.tls.serverCert.keys.cert }}
             - name: Security__Transport__Server__CertificatePath
               value: "/certs/{{ .Values.tls.serverCert.keys.cert }}"
             {{- end }}
             {{- if .Values.tls.serverCert.keys.key }}
             - name: Security__Transport__Server__KeyPath
               value: "/certs/{{ .Values.tls.serverCert.keys.key }}"
-            {{- end }}
-            {{- if .Values.tls.serverCert.keys.cert }}
-            - name: ASPNETCORE_URLS
-              value: https://+:8080
             {{- end }}
             {{- if .Values.env }}
             {{- toYaml .Values.env | nindent 12 -}}
